--- a/templates/default/verboice/verboice.yml.erb
+++ b/templates/default/verboice/verboice.yml.erb
@@ -1,3 +1,4 @@
+broker_port: <%= node['verboice']['broker']['bert_port'] %>
 ispeech_format: mp3
 asset_host: http://<%= node['verboice']['host_name'] %>
 default_url_options:
