--- a/templates/default/asterisk/extensions.ael.erb
+++ b/templates/default/asterisk/extensions.ael.erb
@@ -6,10 +6,10 @@ context default {
 context verboice {
     s => Hangup();
     h => NoOp();
-    _. => AGI(agi://localhost:<%= node['verboice']['broker']['port'] %>,,${EXTEN});
+    _. => AGI(agi://localhost:<%= node['verboice']['broker']['agi_port'] %>,,${EXTEN});
 }
 
 context verboice-restart {
     h => NoOp();
-    _. => AGI(agi://localhost:<%= node['verboice']['broker']['port'] %>,${EXTEN});
+    _. => AGI(agi://localhost:<%= node['verboice']['broker']['agi_port'] %>,${EXTEN});
 }
