--- a/templates/default/verboice/twilio_proxy.conf.erb
+++ b/templates/default/verboice/twilio_proxy.conf.erb
@@ -1,2 +1,10 @@
 ProxyPass /twilio/ http://localhost:<%= node['verboice']['broker']['httpd']['port'] %>/
 ProxyPassReverse /twilio/ http://localhost:<%= node['verboice']['broker']['httpd']['port'] %>/
+<Directory /twilio>
+<% if node['apache']['version'] == '2.4' -%>
+  Require all granted
+<% else -%>
+  Order allow,deny
+  Allow from all
+<% end -%>
+</Directory>
