Added poirot sender option in broker config

--- a/templates/default/verboice/verboice.config.erb
+++ b/templates/default/verboice/verboice.config.erb
@@ -32,7 +32,11 @@
 
   {poirot, [
     {source, <<"verboice-broker">>},
+    <% if node['verboice']['poirot']['sender'] == 'inproc' %>
+    {receiver, []}
+    <% else %>
     {sender, {zmq, [{url, "tcp://<%= node['verboice']['poirot']['server'] %>"}]}}
+    <% end %>
   ]},
 
   {inets, [
