Support for Verboice 2.8 with Asterisk 13
Asterisk specific:
- Change all SIP configurations to PJSIP
- Install certified Asterisk 13.8 instead of 1.8.28
- Handle configuration for new asterisk modules and disable as needed

Verboice general:
- Add configuration for hub
- Add configuration for telemetry

--- a/templates/default/asterisk/extensions.conf.erb
+++ b/templates/default/asterisk/extensions.conf.erb
@@ -3,10 +3,6 @@ exten => s,1,Hangup
 exten => _,1,Hangup
 
 [verboice]
-exten => s,1,Hangup
 exten => h,1,NoOp
-exten => _.,1,AGI(agi://localhost:<%= node['verboice']['broker']['agi_port'] %>,,${EXTEN})
-
-[verboice-restart]
-exten => h,1,NoOp
-exten => _.,1,AGI(agi://localhost:<%= node['verboice']['broker']['agi_port'] %>,${EXTEN})
+exten => _X.,1,AGI(agi://localhost:<%= node['verboice']['broker']['agi_port'] %>,,${EXTEN})
+exten => s,1,AGI(agi://localhost:<%= node['verboice']['broker']['agi_port'] %>,,${EXTEN})
